--- a/IQTest/IQTest.csproj
+++ b/IQTest/IQTest.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>21310222-3303-46b5-a3c7-2f9834e2890f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
