--- a/IQTest/appsettings.json
+++ b/IQTest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=IQTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=SQL5102.site4now.net;Initial Catalog=DB_A6EEBC_IQTest;User Id=DB_A6EEBC_IQTest_admin;Password=Hideia*Y9"
   },
   "Logging": {
     "LogLevel": {
